--- a/Commit_Classifier_Finetuning.ipynb
+++ b/Commit_Classifier_Finetuning.ipynb
@@ -135,7 +135,7 @@
         "id": "9kCJhfWQo-7h"
       },
       "source": [
-        "We initially tried training a model using **1M** of the original data, however the RAM-limitations and time usage of Colab was preventing us from reaching even 1 epoch. We decided to train a model with **100K** entries instead split into 90-10 testing/validation sets."
+        "We initially tried training a model using **1M** of the original data, however the RAM-limitations and time usage of Colab was preventing us from reaching even 1 epoch (or 1 round of training). We decided to train a model with **100K** entries instead split into 90-10 testing/validation sets."
       ]
     },
     {
@@ -169,6 +169,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qj0UEU541PrB"
+      },
+      "source": [
+        "Before training, we need to make sure that we have a GPU installed for training."
       ]
     },
     {
@@ -372,6 +381,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "37Xgn7X91auh"
+      },
+      "source": [
+        "We also need to verify if all values have no missing values."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6AhWrzX7nITB",
@@ -398,6 +416,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WhX__EJT1jDB"
+      },
+      "source": [
+        "We get the average sequence length of all the message entries so that we can limit the sequence length (or maximum words) when training."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "OkKpz_9eJRt7",
@@ -420,6 +447,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NZW5XAyt10ui"
+      },
+      "source": [
+        "We print the columns or the labels to verify that all columns are included in the data."
       ]
     },
     {
@@ -458,8 +494,7 @@
         "outputId": "b9ad1e54-aefb-40d2-ff17-f1150984836d"
       },
       "source": [
-        "print('Count of 1 per label: \\n', df[label_cols].sum(), '\\n') \n",
-        "print('Count of 0 per label: \\n', df[label_cols].eq(0).sum())"
+        "print('Number per label: \\n', df[label_cols].sum(), '\\n') "
       ],
       "execution_count": null,
       "outputs": [
@@ -505,6 +540,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "77BzN_172BbI"
+      },
+      "source": [
+        "One hot labels are important when training for multi-label classification. So you can ignore this for multi-class classification."
+      ]
     },
     {
       "cell_type": "code",
@@ -681,7 +725,7 @@
         "id": "IhVr8SziL_PY"
       },
       "source": [
-        "In order to avoid memory issues with Google Colab, I enforce a max_length of 100 tokens. Note that some sentences may not adequately represent each label because of this."
+        "In order to avoid memory issues with Google Colab, we enforce a max_length of 100 tokens. Note that some sentences may not adequately represent each label because of this. We opted for 100 maximum since the average was around 40+ and we want to have a leeway for other commits. This can be changed depending on the average sequence length of the data."
       ]
     },
     {
@@ -697,6 +741,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6ZS-B7qO2sVx"
+      },
+      "source": [
+        "We destructure the encodings for model training."
+      ]
     },
     {
       "cell_type": "code",
@@ -763,6 +816,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FqT-ZJ4E3FfE"
+      },
+      "source": [
+        "We split our training set into train and validation. Validation is used for monitoring the model when training. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WPFaq4ufnIT2"
@@ -794,6 +856,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3Fp-0M916Zse"
+      },
+      "source": [
+        "We select a batch size of 32 as recommended by the original author. This can be increased depending on the memory capabilities of your trainin platform."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZRnuLna-nIT4"
@@ -815,6 +886,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CcGTljBa6i4h"
+      },
+      "source": [
+        "We can now store the data into a data loader object. This is is more memory-efficient compared to storing in a variable."
+      ]
     },
     {
       "cell_type": "code",
@@ -1477,6 +1557,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1IiqRYam7tPs"
+      },
+      "source": [
+        "We now test our model with the evaluation set. We first check if null values exist and if the columns are the same for the training data and eval data."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "G5Q7hC4GFOLJ",
@@ -1748,6 +1837,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UJWHWBW97-ni"
+      },
+      "source": [
+        "Similar to training, we destrcuture the eval encodings for inference."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "amySMO8EQzf2",
@@ -1774,6 +1872,15 @@
           ],
           "name": "stderr"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZUovu5OZ8DJk"
+      },
+      "source": [
+        "We imitate our training configuration by setting a batch size of 32 as well and create the data loader."
       ]
     },
     {
@@ -1818,6 +1925,15 @@
       },
       "source": [
         "## Prediction and Metics"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "70Yq18eu8KTX"
+      },
+      "source": [
+        "We can now run the eval data for model predictions!"
       ]
     },
     {
@@ -1929,6 +2045,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "jCnBZlMu8TOE"
+      },
+      "source": [
+        "Our initial model's data was trained and evaluated with imbalanced data. This is important to note since the model may be just good at predicting messages with more frequent labels. As you can see, the other and fix labels have a huge advantage in the evaluation as compared to the others. As much as possible, we want to balance the amount of labels in both training and evaluation so you can truly see the performance for all labels equally. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5rLqrHK87eir"
       },
       "source": [
@@ -1969,6 +2094,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wWSIwb2E8ypT"
+      },
+      "source": [
+        "We convert the index values (or predicted index of the label) to the corresponding string label. This will be easier for us to understand if the predicted label is correct in its context."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "QZUglV_A4BF_"
@@ -1983,6 +2117,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xi7nYoYF9R9c"
+      },
+      "source": [
+        "We do this convertion for the true labels and predicted labels which will be used for the table below."
+      ]
     },
     {
       "cell_type": "code",
