--- a/Data_Project_Adding_category_feature.ipynb
+++ b/Data_Project_Adding_category_feature.ipynb
@@ -1721,6 +1721,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Lv06UMfj_buj"
+      },
+      "source": [
+        "These function adds the one hot labels, based on the previously identified categories."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "t7DAFSZoe9Cz"
